--- a/webkhachsan/src/components/Home.css
+++ b/webkhachsan/src/components/Home.css
@@ -1,4 +1,3 @@
-/* Home.css */
 .home-container {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -29,14 +28,14 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-image: url("../images/searchbar.jpg"); /* Đặt ảnh làm nền */
-    background-size: cover; /* Phủ kín div */
-    background-position: center; /* Căn giữa ảnh */
-    background-repeat: no-repeat; /* Không lặp lại ảnh */
-    min-height: 300px; /* Đảm bảo div có chiều cao để hiển thị ảnh */
+    background-image: url("../images/searchbar.jpg");
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    min-height: 300px; 
     display: flex;
     justify-content: center;
-    align-items: center; /* Căn giữa SearchBar */
+    align-items: center; 
 }
 
 .search-bar {
